--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,17 @@
 	</parent>
 	<groupId>org.earthchem</groupId>
 	<artifactId>sesar-rest-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>sesar-rest-api</name>
 	<description>SESAR REST API</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<docker.image.prefix>earthchemrepo</docker.image.prefix>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<dockerfile-maven-version>1.3.2</dockerfile-maven-version>
 	</properties>
 
 	<dependencies>
@@ -35,6 +39,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -76,14 +81,42 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.hekonsek/spring-boot-docker-spotify -->
+        <dependency>
+          <groupId>com.spotify</groupId>
+          <artifactId>dockerfile-maven</artifactId>
+          <version>1.4.10</version>
+          <type>pom</type>
+       </dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+		  <plugin>
+		    <groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+		  </plugin>
+		  <plugin>
+              <groupId>com.spotify</groupId>
+              <artifactId>dockerfile-maven-plugin</artifactId>
+              <version>1.4.10</version>
+              <executions>
+                <execution>
+                  <id>default</id>
+                  <goals>
+                    <goal>build</goal>
+                    <goal>push</goal>
+                  </goals>
+               </execution>
+             </executions>
+             <configuration>
+               <repository>${docker.image.prefix}/${project.artifactId}</repository>
+                 <tag>${project.version}</tag>
+                 <buildArgs>
+                   <JAR_FILE>${project.artifactId}.${project.version}.war</JAR_FILE>
+                 </buildArgs>
+               </configuration>
+          </plugin>
 		</plugins>
 	</build>
 
