--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<dockerfile-maven-version>1.3.2</dockerfile-maven-version>
+		<springframework.version>5.0.6.RELEASE</springframework.version>
 	</properties>
 
 	<dependencies>
@@ -88,6 +89,25 @@
           <version>1.4.10</version>
           <type>pom</type>
        </dependency>
+    
+
+       <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-core</artifactId>
+         <version>2.7.2</version>
+       </dependency>
+       <dependency>
+         <groupId>com.fasterxml.jackson.core</groupId>
+         <artifactId>jackson-databind</artifactId>
+         <version>2.7.2</version>
+       </dependency>
+       <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
+       <dependency>
+         <groupId>com.fasterxml.jackson.dataformat</groupId>
+         <artifactId>jackson-dataformat-xml</artifactId>
+         <version>2.7.2</version>
+       </dependency>
+
 	</dependencies>
 
 	<build>
