--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
        <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
-         <version>2.9.8</version>
+         <version>2.9.9</version>
        </dependency>
        <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
@@ -105,9 +105,14 @@
        <dependency>
          <groupId>com.fasterxml.jackson.dataformat</groupId>
          <artifactId>jackson-dataformat-xml</artifactId>
-         <version>2.9.8</version>
+         <version>2.9.9</version>
        </dependency>
-
+       <!-- https://mvnrepository.com/artifact/net.sf.supercsv/super-csv -->
+       <dependency>
+         <groupId>net.sf.supercsv</groupId>
+         <artifactId>super-csv</artifactId>
+         <version>2.4.0</version>
+       </dependency>
 	</dependencies>
 
 	<build>
