--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
   sesar:
-    image: earthchemrepo/sesar-rest-api:0.0.1
-    container_name: sesar_api_0.0.1
+    image: earthchemrepo/sesar-rest-api:0.0.2
+    container_name: sesar-rest-api-0.0.2
     ports:
      - "8080:8080"
     volumes:
