Adding environment variable for database configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-
+spring.datasource.url=jdbc:postgresql://${SESAR_DB_SERVER_NAME}:${SESAR_DB_PORT}/${SESAR_DB_NAME}
+spring.datasource.username=${SESAR_DB_WEB_LOGIN}
+spring.datasource.password=${SESAR_DB_WEB_PASS}
+server.port=80
 # JPA settings
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
