Modifying github action to run on push to master branch

--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       # Change this to your branch to deploy your changes to Fargate
-      - docker-build-configuration
+      - master
 
 jobs:
   build_publish_development:
