--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       # Change this to your branch to deploy your changes to Fargate
-      - master
+      - staging
 
 jobs:
   build_publish_development:
@@ -19,7 +19,7 @@ jobs:
     uses: ./.github/workflows/deploy_ecs.yml
     with:
       APPLICATION: sesar-rest-api
-      ENVIRONMENT: production
+      ENVIRONMENT: staging
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.SESAR_AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.SESAR_AWS_SECRET_ACCESS_KEY }}
