--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -19,8 +19,9 @@ jobs:
     uses: ./.github/workflows/deploy_ecs.yml
     with:
       APPLICATION: sesar-rest-api
-      ENVIRONMENT: production
+      ENVIRONMENT: staging
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.SESAR_AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.SESAR_AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.SESAR_AWS_REGION }}
+     
