Updating github actions to deploy production environemnt from master branch

--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -19,7 +19,7 @@ jobs:
     uses: ./.github/workflows/deploy_ecs.yml
     with:
       APPLICATION: sesar-rest-api
-      ENVIRONMENT: staging
+      ENVIRONMENT: production
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.SESAR_AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.SESAR_AWS_SECRET_ACCESS_KEY }}
