--- a/.github/workflows/deploy_development.yml
+++ b/.github/workflows/deploy_development.yml
@@ -14,12 +14,32 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.SESAR_AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.SESAR_AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.SESAR_AWS_REGION }}
-  deploy_ecs_development:
+  deploy_ecs_production:
     needs: [build_publish_development]
     uses: ./.github/workflows/deploy_ecs.yml
     with:
       APPLICATION: sesar-rest-api
       ENVIRONMENT: production
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.SESAR_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.SESAR_AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.SESAR_AWS_REGION }}
+  deploy_ecs_sandbox:
+    needs: [build_publish_development]
+    uses: ./.github/workflows/deploy_ecs.yml
+    with:
+      APPLICATION: sesar-rest-api
+      ENVIRONMENT: sandbox
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.SESAR_AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.SESAR_AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.SESAR_AWS_REGION }}
+  deploy_ecs_staging:
+    needs: [build_publish_development]
+    uses: ./.github/workflows/deploy_ecs.yml
+    with:
+      APPLICATION: sesar-rest-api
+      ENVIRONMENT: staging
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.SESAR_AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.SESAR_AWS_SECRET_ACCESS_KEY }}
